--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="list">
         <div><a href="Circle.html"><img src="C.png"></a></div>
-        <div><a href="JawBrk.html"><img src="j.png"></a></div>
+        <div><a href="JawBrk.html"><img src="J.png"></a></div>
     </div>  
     
 </body>
