--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
 
     <div class="list">
-        <div><a href="Circle.html"><img src="C.png"></a></div>
-        <div><a href="JawBrk.html"><img src="J.png"></a></div>
+        <div><a href="https://www.behance.net/gallery/180081323/Chords-UIUX-Project"><img src="C.png"></a></div>
+        <div><a href="https://www.behance.net/gallery/180081783/Jaw-Breaker-Game-Design"><img src="J.png"></a></div>
     </div>  
     
 </body>
