december webpage edit

--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
 </head>
 
 <body>
-
+    <head><h1>Abhinav Manoj</h1></head>
+    <hr>
     <div class="list">
-        <div><a href="https://www.behance.net/gallery/180081323/Chords-UIUX-Project"><img src="C.png"></a></div>
-        <div><a href="https://www.behance.net/gallery/180081783/Jaw-Breaker-Game-Design"><img src="J.png"></a></div>
+        <div><a href="https://www.behance.net/gallery/180081323/Chords-UIUX-Project"><img src="imgs/CC.png"></a></div>
+        <div><a href="https://www.behance.net/gallery/183895851/Design-Task-Server-Backend-Tool"><img src="imgs/TQ.png"></a></div>
+        <div><a href="https://www.behance.net/gallery/180081783/Jaw-Breaker-Game-Design"><img src="imgs/JB.png"></a></div>
+        <div><a href="https://www.behance.net/gallery/150637875/Animation-showreel-2023"><img src="imgs/DR.png"></a></div>
     </div>  
-    
+    <hr>
+    <footer>www.behance.net/abnv-m</footer>
 </body>
 
 </html>
