--- a/index.html
+++ b/index.html
@@ -6,20 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Home</title>
+    
+    <title>Abhinav's Portfolio</title>
 </head>
 
 <body>
-    <head><h1>Abhinav Manoj</h1></head>
-    <hr>
-    <div class="list">
-        <div><a href="https://www.behance.net/gallery/180081323/Chords-UIUX-Project"><img src="imgs/CC.png"></a></div>
-        <div><a href="https://www.behance.net/gallery/183895851/Design-Task-Server-Backend-Tool"><img src="imgs/TQ.png"></a></div>
-        <div><a href="https://www.behance.net/gallery/180081783/Jaw-Breaker-Game-Design"><img src="imgs/JB.png"></a></div>
-        <div><a href="https://www.behance.net/gallery/150637875/Animation-showreel-2023"><img src="imgs/DR.png"></a></div>
-    </div>  
-    <hr>
-    <footer>www.behance.net/abnv-m</footer>
+    <h1 id="txt">Abhinav Manoj</h1>
+    
+   
+    <div class="list" >
+        <div class="Chords" onmouseleave="cut()" onmouseover="showname(this)"><a href="https://www.behance.net/gallery/180081323/Chords-UIUX-Project"><img src="imgs/CC.png"></a></div>
+        <div class="TravelQuest" onmouseleave="cut()" onmouseover="showname(this)"><a href="https://www.behance.net/gallery/183895851/Design-Task-Server-Backend-Tool"><img src="imgs/TQ.png"></a></div>
+        <div class="JawBreaker" onmouseleave="cut()" onmouseover="showname(this)"><a href="https://www.behance.net/gallery/180081783/Jaw-Breaker-Game-Design"><img src="imgs/JB.png"></a></div>
+        <div class="DemoReel" onmouseleave="cut()" onmouseover="showname(this)"><a href="https://www.behance.net/gallery/150637875/Animation-showreel-2023"><img src="imgs/DR.png"></a></div>
+    </div>
+    <footer id="nametag"></footer>
+    <script src="script.js"></script>
+
+
 </body>
 
 </html>
