--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <h1 id="txt">Abhinav Manoj</h1>
-    
+    <div class="note"><div> Hello, I'm Abhinav Manoj. I like to make interactive designs and animations. You can check out my projects here.</div></div>
    
     <div class="list" >
         <div class="Chords" onmouseleave="cut()" onmouseover="showname(this)"><a href="https://www.behance.net/gallery/180081323/Chords-UIUX-Project"><img src="imgs/CC.png"></a></div>
