--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
     <h1 id="txt">Abhinav Manoj</h1>
+    <audio id="myaudio" src="pop.mp3"></audio>
     <div class="note"><div> Hello, I'm Abhinav Manoj. I like to make interactive designs and animations. You can check out my projects here.</div></div>
    
     <div class="list" >
