--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
     
     <title>Abhinav's Portfolio</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
+    <script src="https:////cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.11.4/TweenMax.min.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -22,9 +25,11 @@
         <div class="DemoReel" onmouseleave="cut()" onmouseover="showname(this)"><a href="https://www.behance.net/gallery/150637875/Animation-showreel-2023"><img src="imgs/DR.png"></a></div>
     </div>
     <footer id="nametag"></footer>
+
+    <section id="canvas">
+        <div class="circle"><img src="imgs/dot.png"></div>
+    </section>
+
     <script src="script.js"></script>
-
-
 </body>
-
 </html>
