--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    
     <div class="list" >
         <div class="Chords" onmouseleave="cut()" onmouseover="showname(this)"><a href="https://www.behance.net/gallery/180081323/Chords-UIUX-Project"><img src="imgs/CC.png"></a></div>
-        <div class="TravelQuest" onmouseleave="cut()" onmouseover="showname(this)"><a href="https://www.behance.net/gallery/183895851/Design-Task-Server-Backend-Tool"><img src="imgs/TQ.png"></a></div>
+        <div class="Hearts'n'Darts" onmouseleave="cut()" onmouseover="showname(this)"><a href="https://www.behance.net/gallery/188752853/Hearts-and-Darts"><img src="imgs/TQ.png"></a></div>
         <div class="JawBreaker" onmouseleave="cut()" onmouseover="showname(this)"><a href="https://www.behance.net/gallery/180081783/Jaw-Breaker-Game-Design"><img src="imgs/JB.png"></a></div>
         <div class="DemoReel" onmouseleave="cut()" onmouseover="showname(this)"><a href="https://www.behance.net/gallery/150637875/Animation-showreel-2023"><img src="imgs/DR.png"></a></div>
     </div>
